--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: apt install -y nodejs
+    - run: sudo -s apt install -y nodejs
     - run: sudo apt install -y npm
     - run: sudo npm install -g yarn
     - run: yarn install
