--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
     - run: yarn install
     - run: yarn run build
     - run: ls
-    - run: sudo cp -r /actions-runner-openmarkethub/_work/open-market-hub-frontend/open-market-hub-frontend/out/* /var/www/bibekdhungana.com/personalsite
+    - run: sudo cp -r /actions-runner-openmarkethub/_work/open-market-hub-frontend/open-market-hub-frontend/out/* /var/www/openmarkethub.com/openmarkethub
